# Semantic-Consistency-Analyser

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  test.py
sca/: __init__.py  config.py
sca/cli/: __init__.py  main.py
sca/core/: __init__.py  analyzer.py  clustering.py  embedder.py  metrics.py  sampler.py
sca/core/backends/: __init__.py  hf.py  litellm.py  protocol.py
sca/export/: __init__.py  html.py  json.py  png.py
sca/tui/: __init__.py  app.py
sca/tui/widgets/: __init__.py  cluster_bars.py  cluster_modal.py  cluster_panel.py  metrics_panel.py  sample_feed.py  sample_modal.py  scatter_plot.py  similarity_heatmap.py  similarity_histogram.py
tests/: __init__.py  test_analyzer.py  test_clustering.py  test_metrics.py
